feat: add unified API to list notes
